--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,18 @@
     <title>Memory Match</title>
     <link rel="stylesheet" href="style.css" />
   </head>
+  <header>
+    <h1>Memory Game</h1>
+  </header>
   <body>
-    <div id="root"></div>
+    <div class='box'>
+    <div class='wave -one'> </div>
+    <div class='wave -two'></div>
+    </div>
+    <!-- Aqui irão conter todos os cards -->
+      <div id="root"></div>
+    </div>
     <script src="main.js" type="module"></script>
   </body>
 </html>
+
