--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,10 @@
     <h1>Memory Game</h1>
   </header>
   <body>
+    <div class="grid">
+    <div class="card">
+    <div class="front">
+    <div class="face back"></div>
     <div class='box'>
     <div class='wave -one'> </div>
     <div class='wave -two'></div>
