duplicação dos cards.

--- a/src/index.html
+++ b/src/index.html
@@ -10,15 +10,11 @@
   </header>
   <body>
     <div class="grid">
-    <div class="card">
-    <div class="front">
-    <div class="face back"></div>
-    <div class='box'>
-    <div class='wave -one'> </div>
-    <div class='wave -two'></div>
+    <!-- <div class='wave -one'> </div>
+    <div class='wave -two'></div> -->
     </div>
     <!-- Aqui irão conter todos os cards -->
-      <div id="root"></div>
+      <div id="root" class="grid"></div>
     </div>
     <script src="main.js" type="module"></script>
   </body>
